--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,60 @@
-/* You can add global styles to this file, and also import other style files */
+html {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+body {
+  margin: 0;
+}
+
+button {
+  outline: none;
+  cursor: pointer;
+  border-radius: 0;
+  text-transform: uppercase;
+  background-color: transparent;
+}
+
+.button_white,
+.button_black {
+  font-size: 15px;
+  font-weight: 300;
+  padding: 15px 25px;
+}
+
+.button_white {
+  color: #ffffff;
+  border: 2px solid #ffffff;
+}
+
+.button_white:hover {
+  color: #000000;
+  background-color: #ffffff;
+}
+
+.button_white:active {
+  background: linear-gradient(#ffffff, #eeeeee, #ffffff);
+}
+
+.button_black {
+  color: #000000;
+  border: 2px solid #000000;
+}
+
+.button_black:hover {
+  color: #ffffff;
+  background-color: #000000;
+}
+
+.button_black:active {
+  background: linear-gradient(#000000, #222222, #000000);
+}
+
+.block_center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.hidden {
+  display: none;
+}
