--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -13,7 +13,7 @@
 }
 
 .introduction__box {
-  background-image: url("/assets/img/home__cats.jpg");
+  background-image: url(http://78.media.tumblr.com/tumblr_lolifw1WnD1qbe5pxo1_1280.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
