about page created

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,3 +1,9 @@
-<p>
-  about works!
-</p>
+<div class="box about__background">
+  <div class="about__box">
+    <h3>About this</h3>
+    <p>This page was created with the intention of learning Angular 5. Learning that framework is part of a personal project,
+      know the main technologies for web development and improve my javascript, html and css skills.</p>
+    <p>I'm a perfectionist, so I'm always looking for new ways to present the contents of the pages, but I'm still starting when
+      it comes to design.</p>
+  </div>
+</div>
