--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -9,9 +9,10 @@
 
   <div [class]="navbarLinkBox">
     <button [class]="navbarHiddenButtonClass" (click)="showMenu()">&#9776;</button>
+    <a [class]="navbarLinkClass" routerLink="">Home</a>
     <a [class]="navbarLinkClass" href="">Personal</a>
     <a [class]="navbarLinkClass" href="">Professional</a>
-    <a [class]="navbarLinkClass" href="">About</a>
+    <a [class]="navbarLinkClass" routerLink="about">About</a>
     <a [class]="navbarLinkClass" href="">Contact</a>
   </div>
 
@@ -21,8 +22,9 @@
   </div>
 </nav>
 <nav [class]='navbarDropdown' [ngStyle]="{'display': isVisible}">
+  <a class="navbar__dropdown-item" routerLink="">Home</a>
   <a class="navbar__dropdown-item" href="">Personal</a>
   <a class="navbar__dropdown-item" href="">Professional</a>
-  <a class="navbar__dropdown-item" href="">About</a>
-  <a class="navbar__dropdown-item" href="">Contact</a>
+  <a class="navbar__dropdown-item" routerLink="about">About</a>
+  <a class="navbar__dropdown-item" href=""></a>
 </nav>
