--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -66,7 +66,7 @@
 .navbar-controls__btn_left,
 .navbar-controls__btn_right,
 .navbar-controls_btn_hidden {
-  color: #cccccc;
+  color: #ccc;
   border: none;
 }
 
@@ -111,7 +111,7 @@
   font-size: 12px;
   text-decoration: none;
   text-transform: uppercase;
-  color: #ffffff;
+  color: #fff;
   text-align: center;
 }
 
@@ -144,7 +144,7 @@
 .navbar-controls__btn_left:hover,
 .navbar-controls_btn_hidden:hover,
 .navbar-controls__btn_right:hover {
-  color: #000000;
+  color: #000;
   background-color: rgba(255, 255, 255, 0.5);
 }
 
@@ -153,7 +153,7 @@
 .navbar-controls__btn_left:active,
 .navbar-controls_btn_hidden:active,
 .navbar-controls__btn_right:active {
-  color: #000000;
+  color: #000;
   background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(200, 200, 200, 0.5), rgba(255, 255, 255, 0.5));
 }
 
