modal contact created

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,10 @@ body {
   width: 100%
 }
 
+a {
+  cursor: pointer;
+}
+
 button {
   outline: none;
   cursor: pointer;
@@ -38,7 +42,7 @@ button {
 }
 
 .button_white:active {
-  background: linear-gradient(#fff, #eeeeee, #fff);
+  background: linear-gradient(#fff, #eee, #fff);
 }
 
 .button_black {
@@ -79,4 +83,15 @@ input,
 button,
 textarea {
   border-radius: 2px;
+}
+
+.modal_background {
+  position: fixed;
+  z-index: 10;
+  opacity: 0.7;
+  background-color: #000;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
 }
