--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -1,7 +1,11 @@
 .contact__box {
-  width: calc(100% - 80px);
+  z-index: 20;
+  top: 0;
+  left: 0;
   padding: 40px;
+  position: fixed;
   max-width: 400px;
+  width: calc(100% - 80px);
   background-color: #eee;
 }
 
@@ -11,12 +15,35 @@
   display: block;
   width: 100%;
 }
+
 .contact__label {
   margin-bottom: 2px;
 }
+
 .contact__input {
   margin-bottom: 10px;
 }
+
 .contact__button {
   margin-top: 30px;
+}
+
+.contact__title {
+  margin-top: 0;
+  margin-bottom: 30px;
+}
+
+.contact__close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  border: none;
+}
+
+.contact__close-button:hover {
+  background: radial-gradient(#eee, #fff, #eee);
+}
+
+.contact__close-button:active {
+  background: radial-gradient(#fff, #eee, #fff);
 }
