--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -11,6 +11,6 @@
     <input class="contact__input" id="subject" type="text">
     <label class="contact__label" for="message">Message:</label>
     <textarea class="contact__textarea" name="" id="message" cols="30" rows="10"></textarea>
-    <button class="button_black block_center contact__button" type="submit">Send message</button>
+    <button class="button_black_p block_center contact__button" type="submit">Send message</button>
   </form>
 </div>
