--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -26,7 +26,7 @@
   <a class="navbar__dropdown-item" href="">Personal</a>
   <a class="navbar__dropdown-item" href="">Professional</a>
   <a class="navbar__dropdown-item" routerLink="about">About</a>
-  <a class="navbar__dropdown-item" (click)="globals.setModalContactVisibility()"></a>
+  <a class="navbar__dropdown-item" (click)="globals.setModalContactVisibility()">Contact</a>
 </nav>
 
 <app-contact *ngIf="globals.isVisibleModalContact"></app-contact>
