--- a/src/styles.css
+++ b/src/styles.css
@@ -31,31 +31,49 @@ button {
   padding: 15px 25px;
 }
 
-.button_white {
+.button_white_p,
+.button_black_p {
+  font-size: 12px;
+  font-weight: 300;
+  padding: 10px 20px;
+}
+
+.button_white,
+.button_white_p {
+
   color: #fff;
   border: 2px solid #fff;
 }
 
-.button_white:hover {
+.button_white:hover,
+.button_white_p:hover {
+
   color: #000;
   background-color: #fff;
 }
 
-.button_white:active {
+.button_white:active,
+.button_white_p:active {
+
   background: linear-gradient(#fff, #eee, #fff);
 }
 
-.button_black {
+.button_black,
+.button_black_p {
   color: #000;
   border: 2px solid #000;
 }
 
-.button_black:hover {
+.button_black:hover,
+.button_black_p:hover {
+
   color: #fff;
   background-color: #000;
 }
 
-.button_black:active {
+.button_black:active,
+.button_black_p:active {
+
   background: linear-gradient(#000, #222, #000);
 }
 
