--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -24,9 +24,9 @@
 <div class="professional__box">
   <h2 class="professional__title">Student of software engineering and developer</h2>
 
-  <p>I started my academic life in electrical engineering, but I did't feel fulfilled. In my firts year of university I met programming, and it was love at first code.</p>
+  <p>I started my academic life in electrical engineering, but I did't feel fulfilled. In my first year of university I met programming, and it was love at first code.</p>
   <p>Some years later, I made a hard decision, abandoning eletrical engineering and starting another course almost from scratch. Now I'm finishing software engineering, and I know that was the right decision.</p>
-  <p>I believe in changes, and softwares are changing the world. So if I can work to improve and facilitate life, I'll doing a good job.</p>
+  <p>I believe in changes, and softwares are changing the world. So if I can work to improve and facilitate life, I'll be doing a good job.</p>
   <button class="button_black block_center">Read more</button>
 
 </div>
