Build + fixes about

--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -3,7 +3,7 @@
   width: 100%;
   padding: 100px;
   max-width: 400px;
-  margin-top: 10%;
+  margin-top: 10vh;
   margin-left: 10%;
   background-color: #DEE5BF;
 }
